--- a/http.flv.hls.conf
+++ b/http.flv.hls.conf
@@ -4,17 +4,33 @@
 
 listen              1935;
 max_connections     1000;
+srs_log_tank        file;
+srs_log_file        ./objs/srs.log;
 http_server {
     enabled         on;
     listen          8080;
     dir             ./objs/nginx/html;
 }
+stats {
+	network         0;
+	disk            sda sdb xvda xvdb;
+}
+http_api {
+	enabled         on;
+	listen          1985;
+	raw_api {
+	    enabled             on;
+	    allow_reload        on;
+	    allow_query         on;
+	    allow_update        on;
+	}
+}
 vhost __defaultVhost__ {
     http_hooks {
         enabled         on;
-        on_connect      http://192.168.208.1:5000/api/test/;
-        on_publish      http://192.168.208.1:5000/api/client_connect/;
-        on_hls          http://192.168.208.1:5000/api/client_connect/;
+        on_connect      http://192.168.208.1:5000/api/client_connect/;
+        on_publish      http://192.168.208.1:5000/api/client_publish/;
+        on_hls          http://192.168.208.1:5000/api/client_publish/;
     }
     http_remux {
         enabled     on;
@@ -25,36 +41,6 @@ vhost __defaultVhost__ {
         enabled      on;
         dvr_path     ./objs/nginx/html/[app]/[stream].[2006].[01].[02].[15].[04].[05].mp4;
         dvr_plan     session;
-    }
-    transcode {
-        enabled on;
-        ffmpeg ./objs/ffmpeg/bin/ffmpeg;
-        engine snapshot {
-            enabled on;
-            iformat flv;
-            vfilter {
-                vf fps=1;
-            }
-            vcodec png;
-            vparams {
-                vframes 6;
-            }
-            acodec an;
-            oformat image2;
-            output ./objs/nginx/html/[app]/[stream]-%03d.png;
-        }
-    }
-    ingest {
-        enabled on;
-        input {
-            type file;
-            url ./doc/source.200kbps.768x320.flv;
-        }
-        ffmpeg ./objs/ffmpeg/bin/ffmpeg;
-        engine {
-            enabled off;
-            output rtmp://127.0.0.1:[port]/live?vhost=[vhost]/livestream;
-        }
     }
     hls {
         enabled         on;
